--- a/prototipo/oshi-exemplo/pom.xml
+++ b/prototipo/oshi-exemplo/pom.xml
@@ -27,10 +27,15 @@
             <artifactId>slf4j-simple</artifactId>
             <version>1.7.27</version>
         </dependency>
+         <dependency>
+            <groupId>com.microsoft.sqlserver</groupId>
+            <artifactId>mssql-jdbc</artifactId>
+            <version>7.4.0.jre8</version>
+        </dependency>
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>12</maven.compiler.source>
-        <maven.compiler.target>12</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
 </project>
