atribuindo ao projeto a configuração no maven para gerar arquivo JAR

--- a/prototipo/oshi-exemplo/pom.xml
+++ b/prototipo/oshi-exemplo/pom.xml
@@ -12,6 +12,41 @@
             <url>file:${project.basedir}/lib</url>
         </repository>
     </repositories>
+    
+<!--    Configuração para gerar JAR executável-->
+    <build>
+        <plugins>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>2.4.1</version>
+                <configuration>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                    <archive>
+                      <manifest>
+                        <mainClass>com.mycompany.cerberus.splash</mainClass>
+                      </manifest>
+                    </archive>
+
+                </configuration>
+                <executions>
+                  <execution>
+                    <id>make-assembly</id>
+                    <phase>package</phase>
+                    <goals>
+                        <goal>single</goal>
+                    </goals>
+                  </execution>
+                </executions>
+            </plugin>
+
+        </plugins>
+    </build>
+
+<!-- Todas as dependências do projeto estão contidas aqui:-->
     <dependencies>
         <dependency>
             <groupId>com.github.oshi</groupId>
