--- a/prototipo/oshi-exemplo/pom.xml
+++ b/prototipo/oshi-exemplo/pom.xml
@@ -27,7 +27,7 @@
                     </descriptorRefs>
                     <archive>
                       <manifest>
-                        <mainClass>com.mycompany.cerberus.splash</mainClass>
+                        <mainClass>com.mycompany.cerberus.Splash</mainClass>
                       </manifest>
                     </archive>
 
@@ -69,15 +69,36 @@
             <artifactId>slf4j-simple</artifactId>
             <version>1.7.27</version>
         </dependency>
-         <dependency>
+<!--         <dependency>
             <groupId>com.microsoft.sqlserver</groupId>
             <artifactId>mssql-jdbc</artifactId>
             <version>7.4.0.jre8</version>
+        </dependency>-->
+        <!-- SQL Server -->
+        <dependency>
+        <groupId>com.microsoft.sqlserver</groupId>
+        <artifactId>mssql-jdbc</artifactId>
+        <version>7.2.2.jre8</version>
+        <!-- ou versão 7.2.2.jre11, se sua JDK for a 11 -->
+        <!-- ou versão que já existir na .m2 local -->
         </dependency>
+
         <dependency>
             <groupId>unknown.binary</groupId>
             <artifactId>KControls</artifactId>
             <version>SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-dbcp2</artifactId>
+            <version>2.5.0</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+            <version>5.1.9.RELEASE</version>
+            <type>jar</type>
         </dependency>
     </dependencies>
     <properties>
