--- a/prototipo/oshi-exemplo/pom.xml
+++ b/prototipo/oshi-exemplo/pom.xml
@@ -84,11 +84,6 @@
         </dependency>
 
         <dependency>
-            <groupId>unknown.binary</groupId>
-            <artifactId>KControls</artifactId>
-            <version>SNAPSHOT</version>
-        </dependency>
-        <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-dbcp2</artifactId>
             <version>2.5.0</version>
@@ -99,6 +94,11 @@
             <artifactId>spring-jdbc</artifactId>
             <version>5.1.9.RELEASE</version>
             <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>2.9.0</version>
         </dependency>
     </dependencies>
     <properties>
